[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line_length = 120
extend-exclude = "venv.*"

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py", 
    "log"
]
target-version = "py312"
select = ["ALL"]
ignore = [
    "COM812",   # "Trailing comma missing". Handled by black.
    "E501",     # "Line too long". Handled by black.
]

[tool.ruff.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

[tool.pylint.master]
recursive = "yes"
ignore = [
    "build",
    "conf.py",
    "dist",
]
ignore-patterns = [
    "venv.*",
    "^\\..+" # Ignore hidden folders or files
]

[tool.pylint.messages_control]
max-line-length = 120
# https://github.com/samuelcolvin/pydantic/issues/1961
extension-pkg-whitelist = "pydantic"
# ignore unrecognized-option because of https://github.com/PyCQA/pylint/issues/6799
disable = """
    unrecognized-option,
    missing-function-docstring
    """

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
ignore-signatures = "yes"

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = [
    "build/",
    "venv.*/",
    "dist/"
]

[tool.pytest.ini_options]
addopts = """
    -vv
    --doctest-modules
    --cov=xyrha_flush
    --cov-config=pyproject.toml
    --cov-report xml:reports/coverage.xml
    --cov-report html:reports/coverage_html
"""

[tool.coverage.run]
branch = true
data_file = "reports/.coverage"

[tool.coverage.paths]
source = ["src/", ".tox/*/lib/python*/site-packages/"]

[[tool.mypy.overrides]]
module = [
    # Ignore packages that do not provide type hints
]
ignore_missing_imports = true
