[metadata]
name = xyrha-flush
author = DS422
author_email = 119532762+DS422@users.noreply.github.com
description = A tool runner for C++ development.
url = https://github.com/xyrha/xyrha-flush
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.12
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata


[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    tox
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    black
    ruff
    mypy
    pylint
    pytest

test =
    pytest
    pytest-randomly
    pytest-cov

doc =
    sphinx
    sphinx-material
    myst_parser

build =
    build[virtualenv]